--- a/tutorial/frontend/package.json
+++ b/tutorial/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "npm run wercker tutorial",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --optimize-minimize",
+    "webpack": "webpack --optimize-minimize",
     "test": "test"
   },
   "repository": {
