--- a/wercker.yml
+++ b/wercker.yml
@@ -1,9 +1,9 @@
-box:
-  node: 8.9.0
+box: node:8.9
 
-build:
+deploy:
   steps:
     - npm-install
+      cwd: tutorial/frontend
 
     - script:
       name: webpack
